
option java_package = "com.dwd";
option java_outer_classname = "SimpleProtocols";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

package simple;
message SearchRequest{
    required string query = 1;
    optional int32 page_number = 2;
    optional int32 result_per_page = 3;
}

message SearchResponse {
    repeated Result result = 1;
}

message Result {
    required string url = 1;
    optional string title = 2;
    repeated string snippets = 3;
}

service SearchService {
    rpc Search (SearchRequest) returns (SearchResponse) ;
}
